# labs2023

./: README.md
lab1/: README.md
lab2/: README.md
lab2/soluzioni/: lcm.cpp  taylor.cpp  taylor_opt.cpp
lab3/: README.md
lab3/soluzioni/: sample.cpp
lab4/: README.md
lab4/soluzioni/: sample.cpp
lab5/: README.md
lab5/soluzioni/: CMakeLists.txt  main.cpp  sample.cpp  sample.hpp  sample.test.cpp
lab6/: README.md
lab6/soluzioni/: CMakeLists.txt  functions.cpp  functions.hpp  functions.test.cpp
